# ubuntu38

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
patches/: README.txt
scripts/: cacheburn.py  docker_setup.py  pyenv_setup.py  pytools.py  setup.py  tuneup.py  usnapatch.py  vim_setup.py
shell/: bashrc.txt  dircolors.txt  peter.zsh-theme  profile.txt  pyenvsupport.txt  zshrc.txt
system/: openssl.cnf  rsync_exclude.txt  terminalSettings.txt  text_editor_settings.txt
vim/: vimrc.txt
